# multi-books

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/company/: admin.py  constants.py  models.py
apps/company/migrations/: 0001_initial.py  0002_company_is_active.py  0003_company_status.py  0004_alter_companymember_user_account.py  0005_alter_companymember_user_account.py
apps/customer/: admin.py  models.py  services.py
apps/customer/migrations/: 0001_initial.py  0002_customer_company.py  0003_customer_integration_provider_and_more.py
apps/integration/: admin.py  models.py  provider_config.py  selectors.py  services.py  tasks.py  urls.py  views.py
apps/integration/api/: views.py
apps/integration/migrations/: 0001_initial.py  0002_providerfieldmapping.py  0003_companyintegration_provider_identifier.py  0004_alter_companyintegration_unique_together.py  0005_alter_companyintegration_unique_together.py  0006_companyintegration_last_synced_at.py
apps/integration/quickbooks/: admin.py  apps.py  models.py  selectors.py  services.py  tasks.py  urls.py  views.py
apps/integration/services/: __init__.py  invoice.py
apps/invoice/: admin.py  models.py  services.py
apps/invoice/migrations/: 0001_initial.py  0002_invoice_company_invoice_integration_provider_and_more.py  (+1 more)
apps/user_account/: admin.py  apps.py  managers.py  models.py
apps/user_auth/: apps.py
apps/user_profile/: models.py
config/: api_urls.py  celery.py  settings.py  urls.py
templates/: index.html
utils/: encryption.py  model_utils.py
(+10 files in other folders)
