[project]
name = "multi-books"
version = "0.1.0"
description = ""
authors = [
    {name = "bkawan",email = "ibikeshkawan@gmail.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "django (>=6.0,<7.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "ipdb (>=0.13.13,<0.14.0)",
    "intuit-oauth (>=1.2.6,<2.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "celery (>=5.6.0,<6.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "redis (>=7.1.0,<8.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
